--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-feed": "^2.5.11",
